nsutils/tests/base/errors/badAtyp.trace
send 4 5 2 0 1
recv 2 5 0
send 6 5 1 0 233 38 82
recv 2 5 8
